--- a/index.html
+++ b/index.html
@@ -122,6 +122,15 @@
     <button class="button-52" role="button" id="button-4"
             onclick="window.location.href='04-Data-Type-Identifier/index.html'">Data Type Identifier
     </button>
+    <button class="button-52" role="button" id="button-5"
+            onclick="window.location.href='05-String-Formatter/index.html'">String Formatter
+    </button>
+    <button class="button-52" role="button" id="button-6"
+            onclick="window.location.href='06-Tip-Calculator/index.html'">Tip Calculator
+    </button>
+    <button class="button-52" role="button" id="button-7"
+            onclick="window.location.href='07-Age-Calculator/index.html'">Age Calculator
+    </button>
 </div>
 </body>
 </html>
