--- a/index.html
+++ b/index.html
@@ -111,25 +111,25 @@
 <h1>Project 100 JS</h1>
 <div class="grid-container" id="grid">
     <button class="button-52" role="button" id="button-1"
-            onclick="window.location.href='01-JavaScript-Syntax-Validator/index.html'">JavaScript Syntax Validator
+            onclick="window.location.href='01-JavaScript-Syntax-Validator/index.html'">1. JavaScript Syntax Validator
     </button>
     <button class="button-52" role="button" id="button-2"
-            onclick="window.location.href='02-Simple-Calculator/index.html'">Simple Calculator
+            onclick="window.location.href='02-Simple-Calculator/index.html'">2. Simple Calculator
     </button>
     <button class="button-52" role="button" id="button-3"
-            onclick="window.location.href='03-Temperature-Converter/index.html'">Temperature Converter
+            onclick="window.location.href='03-Temperature-Converter/index.html'">3. Temperature Converter
     </button>
     <button class="button-52" role="button" id="button-4"
-            onclick="window.location.href='04-Data-Type-Identifier/index.html'">Data Type Identifier
+            onclick="window.location.href='04-Data-Type-Identifier/index.html'">4. Data Type Identifier
     </button>
     <button class="button-52" role="button" id="button-5"
-            onclick="window.location.href='05-String-Formatter/index.html'">String Formatter
+            onclick="window.location.href='05-String-Formatter/index.html'">5. String Formatter
     </button>
     <button class="button-52" role="button" id="button-6"
-            onclick="window.location.href='06-Tip-Calculator/index.html'">Tip Calculator
+            onclick="window.location.href='06-Tip-Calculator/index.html'">6. Tip Calculator
     </button>
     <button class="button-52" role="button" id="button-7"
-            onclick="window.location.href='07-Age-Calculator/index.html'">Age Calculator
+            onclick="window.location.href='07-Age-Calculator/index.html'">7. Age Calculator
     </button>
 </div>
 </body>
