--- a/index.html
+++ b/index.html
@@ -110,27 +110,34 @@
 <body>
 <h1>Project 100 JS</h1>
 <div class="grid-container" id="grid">
-    <button class="button-52" role="button" id="button-1"
+    <button class="button-52" role="button"
             onclick="window.location.href='01-JavaScript-Syntax-Validator/index.html'">1. JavaScript Syntax Validator
     </button>
-    <button class="button-52" role="button" id="button-2"
+    <button class="button-52" role="button"
             onclick="window.location.href='02-Simple-Calculator/index.html'">2. Simple Calculator
     </button>
-    <button class="button-52" role="button" id="button-3"
+    <button class="button-52" role="button"
             onclick="window.location.href='03-Temperature-Converter/index.html'">3. Temperature Converter
     </button>
-    <button class="button-52" role="button" id="button-4"
+    <button class="button-52" role="button"
             onclick="window.location.href='04-Data-Type-Identifier/index.html'">4. Data Type Identifier
     </button>
-    <button class="button-52" role="button" id="button-5"
+    <button class="button-52" role="button"
             onclick="window.location.href='05-String-Formatter/index.html'">5. String Formatter
     </button>
-    <button class="button-52" role="button" id="button-6"
+    <button class="button-52" role="button"
             onclick="window.location.href='06-Tip-Calculator/index.html'">6. Tip Calculator
     </button>
-    <button class="button-52" role="button" id="button-7"
+    <button class="button-52" role="button"
             onclick="window.location.href='07-Age-Calculator/index.html'">7. Age Calculator
+    </button>
+    <button class="button-52" role="button"
+            onclick="window.location.href='08-Guess-the-Number-Game/index.html'">8. Guess the Number Game
+    </button>
+    <button class="button-52" role="button"
+            onclick="window.location.href='09-FizzBuzz-Generator/index.html'">9. FizzBuzz Generator
     </button>
 </div>
 </body>
 </html>
+F
