--- a/index.html
+++ b/index.html
@@ -137,6 +137,15 @@
     <button class="button-52" role="button"
             onclick="window.location.href='09-FizzBuzz-Generator/index.html'">9. FizzBuzz Generator
     </button>
+    <button class="button-52" role="button"
+            onclick="window.location.href='10-BMI-Calculator/index.html'">10. BMI Calculator
+    </button>
+    <button class="button-52" role="button"
+            onclick="window.location.href='11-To-Do-List/index.html'">11. To-Do List
+    </button>
+    <button class="button-52" role="button"
+            onclick="window.location.href='12-Shopping-Cart/index.html'">12. Shopping Cart
+    </button>
 </div>
 </body>
 </html>
