--- a/16-Simple-Interest-Calculator/index.html
+++ b/16-Simple-Interest-Calculator/index.html
@@ -5,11 +5,33 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Simple Interest Calculator</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<div class="mainContainer">
+    <div class="bank-header">
+        <h2>Simple Interest Calculator</h2>
+    </div>
 
+    <form action="#" onsubmit="return false">
+        <label for="simpleInterest">💰 Simple Interest</label>
+        <input type="text" id="simpleInterest" placeholder="Enter SI or leave empty">
+
+        <label for="principle">🏦 Principle</label>
+        <input type="text" id="principle" placeholder="Enter Principle Amount">
+
+        <label for="rate">📈 Rate (%)</label>
+        <input type="text" id="rate" placeholder="Enter Rate">
+
+        <label for="time">⏳ Time (Years)</label>
+        <input type="text" id="time" placeholder="Enter Time">
+
+        <button id="calculateBtn">Calculate</button>
+    </form>
+
+    <div class="output"></div>
+</div>
 <script src="./script.js"></script>
 </body>
 </html>
