--- a/13-Palindrome-Checker/index.html
+++ b/13-Palindrome-Checker/index.html
@@ -5,11 +5,18 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Palindrome Checker</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+<div class="mainContainer">
+    <h1>Palindrome Checker</h1>
+    <div class="inputContainer">
+        <label for="stringInput">Enter a String</label>
+        <input type="text" id="stringInput">
+    </div>
+    <div class="outputContainer"></div>
+</div>
 <script src="./script.js"></script>
 </body>
 </html>
