--- a/index.html
+++ b/index.html
@@ -146,6 +146,18 @@
     <button class="button-52" role="button"
             onclick="window.location.href='12-Shopping-Cart/index.html'">12. Shopping Cart
     </button>
+    <button class="button-52" role="button"
+            onclick="window.location.href='13-Palindrome-Checker'">13. Palindrome-Checker
+    </button>
+    <button class="button-52" role="button"
+            onclick="window.location.href='14-Word-Counter'">14. Word Counter
+    </button>
+    <button class="button-52" role="button"
+            onclick="window.location.href='15-Random-Dice-Roller'">15. Random Dice Roller
+    </button>
+    <button class="button-52" role="button"
+            onclick="window.location.href='16-Simple-Interest-Calculator'">16. Simple Interest Calculator
+    </button>
 </div>
 </body>
 </html>
