--- a/index.html
+++ b/index.html
@@ -243,6 +243,49 @@
             </div>
         </div>
         <!--                    CHANGE                    --></div>
+    <div class="card">
+        <div class="card_inner">
+            <div class="imgDiv">
+                <img src="./assets/images/project (16).png"
+                     alt="Project Image">
+            </div>
+            <div class="btnDiv">
+                <button class="button-52" role="button"
+                        onclick="window.location.href='17-Screen-Size-Detector/index.html'">17. Screen Size Detector
+                    Calculator
+                </button>
+            </div>
+        </div>
+    </div>
+    <!--                    CHANGE                    -->
+    <div class="card">
+        <div class="card_inner">
+            <div class="imgDiv">
+                <img src="./assets/images/project (16).png"
+                     alt="Project Image">
+            </div>
+            <div class="btnDiv">
+                <button class="button-52" role="button"
+                        onclick="window.location.href='18-URL-Redirector/index.html'">18. URL Redirector
+                </button>
+            </div>
+        </div>
+    </div>
+    <!--                    CHANGE                    -->
+    <div class="card">
+        <div class="card_inner">
+            <div class="imgDiv">
+                <img src="./assets/images/project (16).png"
+                     alt="Project Image">
+            </div>
+            <div class="btnDiv">
+                <button class="button-52" role="button"
+                        onclick="window.location.href='19-Dynamic-Clock/index.html'">19. Dynamic Clock
+                </button>
+            </div>
+        </div>
+    </div>
+    <!--                    CHANGE                    -->
 </div>
 
 </body>
