--- a/20-Color-Theme-Changer/index.html
+++ b/20-Color-Theme-Changer/index.html
@@ -1,14 +1,16 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Color Theme Changer</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<script src="./script.js"></script>
+    <div class="container">
+        <h1>Color Theme Changer</h1>
+        <button id="theme-toggle">Toggle Theme</button>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
