--- a/21-Keyboard-Event-Logger/index.html
+++ b/21-Keyboard-Event-Logger/index.html
@@ -5,11 +5,25 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Keyboard Event Logger</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<div class="container">
+    <h1>Keyboard Event Logger</h1>
+    <div class="inputDiv">
+        <label for="input">
+            <input type="text" id="input" placeholder="Press a key">
+        </label>
+    </div>
 
+    <div class="outputDiv">
+        <label>
+            <textarea id="output" readonly></textarea>
+        </label>
+    </div>
+
+</div>
 <script src="./script.js"></script>
 </body>
 </html>
