--- a/23-Notes-App/index.html
+++ b/23-Notes-App/index.html
@@ -1,15 +1,21 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Notes App</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<script src="./script.js"></script>
+<h1>Notes App</h1>
+<label><input type="text" id="noteInput" placeholder="Enter your note"/>
+    <button id="addNoteBtn">Add Note</button>
+</label>
+
+<h2>Saved Notes:</h2>
+<div id="notesDisplay"></div>
+
+<script src="script.js"></script>
 </body>
 </html>
