--- a/index.html
+++ b/index.html
@@ -286,6 +286,62 @@
             </div>
         </div>
         <!--                    CHANGE                    -->
+        <div class="card">
+            <div class="card_inner">
+                <div class="imgDiv">
+                    <img src="./assets/images/project%20(20).gif"
+                         alt="Project Image">
+                </div>
+                <div class="btnDiv">
+                    <button class="button-52" role="button"
+                            onclick="window.location.href='20-Color-Theme-Changer/index.html'">20. Color Theme Changer
+                    </button>
+                </div>
+            </div>
+        </div>
+        <!--                    CHANGE                    -->
+        <div class="card">
+            <div class="card_inner">
+                <div class="imgDiv">
+                    <img src="./assets/images/project%20(21).gif"
+                         alt="Project Image">
+                </div>
+                <div class="btnDiv">
+                    <button class="button-52" role="button"
+                            onclick="window.location.href='21-Keyboard-Event-Logger/index.html'">21. Keyboard Event Logger
+                    </button>
+                </div>
+            </div>
+        </div>
+        <!--                    CHANGE                    -->
+        <div class="card">
+            <div class="card_inner">
+                <div class="imgDiv">
+                    <img src="./assets/images/project%20(22).gif"
+                         alt="Project Image">
+                </div>
+                <div class="btnDiv">
+                    <button class="button-52" role="button"
+                            onclick="window.location.href='22-Button-Click-Counter/index.html'">22. Button Click Counter
+                    </button>
+                </div>
+            </div>
+        </div>
+        <!--                    CHANGE                    -->
+        <div class="card">
+            <div class="card_inner">
+                <div class="imgDiv">
+                    <img src="./assets/images/project%20(23).gif"
+                         alt="Project Image">
+                </div>
+                <div class="btnDiv">
+                    <button class="button-52" role="button"
+                            onclick="window.location.href='23-Notes-App/index.html'">23. Notes App
+                    </button>
+                </div>
+            </div>
+        </div>
+        <!--                    CHANGE                    -->
     </div>
 </div>
 
