--- a/22-Button-Click-Counter/index.html
+++ b/22-Button-Click-Counter/index.html
@@ -5,11 +5,14 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Button Click Counter</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+<div class="container">
+    <h1>Button Click Counter</h1>
+    <button id="btn">Click Me</button>
+</div>
 <script src="./script.js"></script>
 </body>
 </html>
