--- a/25-Countdown-Timer/index.html
+++ b/25-Countdown-Timer/index.html
@@ -5,11 +5,20 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Countdown Timer</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<div class="container">
 
+    <h2>Countdown Timer</h2>
+    <label for="datetime">Enter Date and Time</label>
+    <input type="datetime-local" id="datetime">
+    <button onclick="startCountdown()">Start Countdown</button>
+
+    <div id="countdown"></div>
+
+</div>
 <script src="./script.js"></script>
 </body>
 </html>
