--- a/index.html
+++ b/index.html
@@ -342,6 +342,20 @@
             </div>
         </div>
         <!--                    CHANGE                    -->
+        <div class="card">
+            <div class="card_inner">
+                <div class="imgDiv">
+                    <img src="./assets/images/project%20(25).gif"
+                         alt="Project Image">
+                </div>
+                <div class="btnDiv">
+                    <button class="button-52" role="button"
+                            onclick="window.location.href='25-Countdown-Timer/index.html'">25. Countdown Timer
+                    </button>
+                </div>
+            </div>
+        </div>
+        <!--                    CHANGE                    -->
     </div>
 </div>
 
