--- a/index.html
+++ b/index.html
@@ -345,6 +345,20 @@
         <div class="card">
             <div class="card_inner">
                 <div class="imgDiv">
+                    <img src="./assets/images/project%20(24).gif"
+                         alt="Project Image">
+                </div>
+                <div class="btnDiv">
+                    <button class="button-52" role="button"
+                            onclick="window.location.href='24-Expense-Tracker/index.html'">24. Expense Tracker
+                    </button>
+                </div>
+            </div>
+        </div>
+        <!--                    CHANGE                    -->
+        <div class="card">
+            <div class="card_inner">
+                <div class="imgDiv">
                     <img src="./assets/images/project%20(25).gif"
                          alt="Project Image">
                 </div>
