--- a/24-Expense-Tracker/index.html
+++ b/24-Expense-Tracker/index.html
@@ -1,15 +1,58 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Expense Tracker</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
+<div class="container">
+    <h2>Expense Tracker</h2>
+    <form id="expense-form">
+        <label for="expense-name">Expense Name:</label>
+        <input type="text" id="expense-name" placeholder="e.g. Groceries" required>
+
+        <label for="category">Category:</label>
+        <select id="category">
+            <option value="Food">Food</option>
+            <option value="Transport">Transport</option>
+            <option value="Rent">Rent</option>
+            <option value="Utilities">Utilities</option>
+            <option value="Entertainment">Entertainment</option>
+            <option value="Other">Other</option>
+        </select>
+
+        <label for="amount">Amount ($):</label>
+        <input type="number" id="amount" placeholder="e.g. 50" required>
+
+        <button type="submit">Add Expense</button>
+    </form>
+</div>
+
+<div class="expenses-container">
+    <h2>Expense List</h2>
+
+    <div class="category-filter">
+        <label for="filter-category">Filter by Category:</label>
+        <select id="filter-category">
+            <option value="All">All Categories</option>
+            <option value="Food">Food</option>
+            <option value="Transport">Transport</option>
+            <option value="Rent">Rent</option>
+            <option value="Utilities">Utilities</option>
+            <option value="Entertainment">Entertainment</option>
+            <option value="Other">Other</option>
+        </select>
+    </div>
+
+    <ul class="expense-list" id="expense-list"></ul>
+
+    <div class="total" id="total-expenses">Total Expenses: $0</div>
+</div>
+
 <script src="./script.js"></script>
+
 </body>
 </html>
