--- a/26-Event-Remainder-App/index.html
+++ b/26-Event-Remainder-App/index.html
@@ -15,8 +15,10 @@
         <form action="#" onsubmit="return false">
             <label for="eventInput">Enter Event:</label>
             <input type="text" id="eventInput">
-            <label for="dtInput">Enter Date:</label>
-            <input type="datetime-local" id="dtInput">
+            <label for="dateInput">Enter Date:</label>
+            <input type="date" id="dateInput">
+            <label for="timeInput">Enter Time:</label>
+            <input type="time" id="timeInput">
             <button class="submitBtn">Add Remainder</button>
         </form>
     </div>
