--- a/index.html
+++ b/index.html
@@ -370,6 +370,34 @@
             </div>
         </div>
         <!--                    CHANGE                    -->
+        <div class="card">
+            <div class="card_inner">
+                <div class="imgDiv">
+                    <img src="./assets/images/project%20(26).gif"
+                         alt="Project Image">
+                </div>
+                <div class="btnDiv">
+                    <button class="button-52" role="button"
+                            onclick="window.location.href='26-Event-Remainder-App/index.html'">26. Event Remainder App
+                    </button>
+                </div>
+            </div>
+        </div>
+        <!--                    CHANGE                    -->
+        <div class="card">
+            <div class="card_inner">
+                <div class="imgDiv">
+                    <img src="./assets/images/project%20(27).gif"
+                         alt="Project Image">
+                </div>
+                <div class="btnDiv">
+                    <button class="button-52" role="button"
+                            onclick="window.location.href='27-Stopwatch/index.html'">27. Stopwatch
+                    </button>
+                </div>
+            </div>
+        </div>
+        <!--                    CHANGE                    -->
     </div>
 </div>
 
