--- a/28-Typing-Speed-Tester/index.html
+++ b/28-Typing-Speed-Tester/index.html
@@ -1,15 +1,25 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Typing Speed Tester</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-<script src="./script.js"></script>
+    <div class="container">
+        <h1>Typing Speed Tester</h1>
+        <p id="paragraph">
+            The quick brown fox jumps over the lazy dog. Practice typing this paragraph as fast and accurately as possible.
+        </p>
+        <textarea id="userInput" placeholder="Start typing here..."></textarea>
+        <button id="retry">Retry</button>
+        <div id="results">
+            <p>Time: <span id="time">0</span> seconds</p>
+            <p>Speed: <span id="speed">0</span> WPM</p>
+            <p>Accuracy: <span id="accuracy">0</span>%</p>
+        </div>
+    </div>
+    <script src="./script.js"></script>
 </body>
 </html>
