--- a/index.html
+++ b/index.html
@@ -398,6 +398,48 @@
             </div>
         </div>
         <!--                    CHANGE                    -->
+        <div class="card">
+            <div class="card_inner">
+                <div class="imgDiv">
+                    <img src="./assets/images/project%20().gif"
+                         alt="Project Image">
+                </div>
+                <div class="btnDiv">
+                    <button class="button-52" role="button"
+                            onclick="window.location.href='28-Typing-Speed-Tester/index.html'">28. Typing Speed Tester
+                    </button>
+                </div>
+            </div>
+        </div>
+        <!--                    CHANGE                    -->
+        <div class="card">
+            <div class="card_inner">
+                <div class="imgDiv">
+                    <img src="./assets/images/project%20().gif"
+                         alt="Project Image">
+                </div>
+                <div class="btnDiv">
+                    <button class="button-52" role="button"
+                            onclick="window.location.href='29-Student-Grade-Tracker/index.html'">29. Student Grade Tracker
+                    </button>
+                </div>
+            </div>
+        </div>
+        <!--                    CHANGE                    -->
+        <div class="card">
+            <div class="card_inner">
+                <div class="imgDiv">
+                    <img src="./assets/images/project%20().gif"
+                         alt="Project Image">
+                </div>
+                <div class="btnDiv">
+                    <button class="button-52" role="button"
+                            onclick="window.location.href='30-Inventory-Management-System/index.html'">30. Inventory Management System
+                    </button>
+                </div>
+            </div>
+        </div>
+        <!--                    CHANGE                    -->
     </div>
 </div>
 
